--- a/config/default.yaml
+++ b/config/default.yaml
@@ -4,7 +4,7 @@ GENERAL:
 
 DATA:
   data_dir: datasets/train
-  batch_size: 6
+  batch_size: 16
   train_workers: 4
 
   augmentation: True
@@ -13,11 +13,13 @@ LIT_MODEL:
   pretrained_weights:
 
   # optimizer
-  weight_decay: 0.001
+  weight_decay: 0.0001
   lr: 0.0005
-  beta: 4
   # loss
-  lambda_: 0.1
+  lambda_kld: 1
+  lambda_recon: 0.1
+#  lambda_image: 10
+#  lambda_latent: 0.5
 
 TRAINER:
   max_epochs: 1000
